--- a/Comprare.dproj
+++ b/Comprare.dproj
@@ -163,6 +163,10 @@
             <Form>Frm_comercios</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="U_produtos.pas">
+            <Form>Frm_produtos</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
